Fix issue with overflowing lines form About section.

--- a/scss/element.scss
+++ b/scss/element.scss
@@ -19,7 +19,7 @@
     width:    290px;
     height:   2px;
     background-color: $blue;
-    
+    overflow: hidden;
 
 }
 
@@ -32,7 +32,7 @@
 .line__02
 {
     top:    32%;
-    right: -27%;
+    right: -25%;
 }
 // <!----------- GALLERY ----------->
 
