--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,7 @@ body
   display:        flex;
   flex-direction: column;
   align-items:    center;
+  overflow-x:     hidden; // This cuts off overflowing elements on the left and right of the viewport
 }
 
 header, section
